--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
       <header>
         <% logo = image_tag("images/logo.png", :alt => "Sample App", :class => "round") %>
-        <%= link_to logo, root_path %>
+        <%= link_to logo, '/' %>
         <nav class="round">
           <ul>
             <li><%= link_to "Home", '/ ' %></li>
