--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -2,10 +2,10 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->  
     <!-- blueprint stylesheets -->
-    <%= stylesheet_link_tag 'custom', :media => 'screen' %>
-    <%= stylesheet_link_tag 'custom', :media => 'print' %>
+    <%= stylesheet_link_tag 'screen', :media => 'screen' %>
+    <%= stylesheet_link_tag 'print', :media => 'print' %>
     <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
     <!-- custom stylesheets -->
-    <%= stylesheet_link_tag 'custom', :media => 'screen' %>
+    <%= stylesheet_link_tag 'custom', :media => 'custom' %>
     <!-- rails generated stylesheets -->
-    <%= stylesheet_link_tag 'custom', :media => 'scaffold' %>
+    <%= stylesheet_link_tag 'scaffold', :media => 'scaffold' %>
