--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -6,6 +6,6 @@
     <%= stylesheet_link_tag 'print', :media => 'print' %>
     <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
     <!-- custom stylesheets -->
-    <%= stylesheet_link_tag 'custom', :media => 'custom' %>
+    <%= stylesheet_link_tag 'custom', :media => 'screen' %>
     <!-- rails generated stylesheets -->
-    <%= stylesheet_link_tag 'scaffold', :media => 'scaffold' %>
+    <%= stylesheet_link_tag 'scaffold', :media => 'screen' %>
