--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -2,8 +2,8 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->  
     <!-- blueprint stylesheets -->
-    <%= stylesheet_link_tag 'screen', :media => 'screen' %>
-    <%= stylesheet_link_tag 'print', :media => 'print' %>
+    <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
+    <%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>
     <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
     <!-- custom stylesheets -->
     <%= stylesheet_link_tag 'custom', :media => 'screen' %>
