--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,15 +13,15 @@
   
   <div class="field">
     <%= f.label :password %><br />
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
   </div>
   
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.text_field :password_confirmation %>
+    <%= f.label :password_confirmation, "Confirmation" %><br />
+    <%= f.password_field :password_confirmation %>
   </div>
   
-  <div class="action">
+  <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
   
