--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,22 @@
-<p id="notice"><%= notice %></p>
+<h1>Sign up</h1>
 
-<h1>Editing user</h1>
+<%= form_for(@user) do |f| %>
 
-<%= render 'form' %>
+  <%= render 'fields', :f => f %>
+  
+  <div class="actions">
+    <%= f.submit "Update" %>
+  </div>
+  
+<% end %>  
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+
+
+<br />
+
+<div class="field">
+  <%= gravatar_for @user %>
+  <a href="http://gravatar.com/emails" target="_blank">Change</a>
+</div>
+
+<br />
