--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @title %></h1>
 
+<%= will_paginate %>
+
 <ul class="users">
   <% @users.each do |user| %>
     <li>
@@ -9,6 +11,4 @@
   <% end %>
 </ul>
 
-<br />
-
-<%= link_to 'New User', new_user_path %>
+<%= will_paginate %>
