--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,12 +3,15 @@
 <%= will_paginate %>
 
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, { :size => 30, :class => 'gravatar_norm' } %>
-      <%= link_to user.name, user_path(user) %>
-      <!-- %= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete % --> 
-  <% end %>
+
+  <%#= note the less compact way to do things  %>
+  <%#= @users.each do |user| %>
+    <%#= render 'user', :user => user %>
+  <%#= end %>
+  
+  <%#= note the more compact way to do this %>
+  <%= render @users %>
+
 </ul>
 
 <%= will_paginate %>
