--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,12 @@
-    <h1>Sample App</h1>
-    <p>
-      This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
-    </p>
+<% if signed_in? %>
 
-    <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+    <h1>What's up?</h1>
+    <%= render 'shared/micropost_form' %>
+    <%= render 'shared/user_info' %>
+    
+<% else %>
+
+    <h1>Sample App</h1>
+    <%= render 'pages/not_signed_in' %>
+    
+<% end %>
