In Ch 11.  Microposts now created.  Form shared on 2 pages.  Esctatic.  RSpec green.

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -159,8 +159,9 @@ footer nav {
   width: 390px;
   padding: 20px;
   margin: 0;
+  background: #EEEEEE;
   height:auto !important; 
-  min-height:100px;
+  max-height:100px;
 }
 
  
