--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,14 @@
 
 <div class="g_container" id="g_container">
-  
-  <%= render 'shared/display_microposts' %>
 
+  <%= render 'shared/micropost_error_messages' %>
+    
+  <%= render 'shared/display_gravatar_h1' %>
+  
   <%= render 'shared/user_info' %>
+  
+  <%= render 'shared/micropost_form' %>
+    
+  <%= render 'shared/display_microposts' %>
 
 </div>
