--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <% if signed_in? %>
 
     <h1>What's up?</h1>
+    
+    <%= render 'shared/micropost_error_messages' %>
     <%= render 'shared/micropost_form' %>
     <%= render 'shared/user_info' %>
     
