--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,7 @@
     <%= render 'shared/micropost_error_messages' %>
     <%= render 'shared/micropost_form' %>
     <%= render 'shared/user_info' %>
+    <%= render 'shared/feed' %>
     
 <% else %>
 
