--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,4 +4,14 @@
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
   </span>
+  <%# if current_user?(micropost.user) # sometimes fails.  # Rails bug %>
+  <% user = micropost.user rescue User.find(micropost.user_id) %>
+  <% if current_user?(user) %>
+  <span class="g_delete">
+    <%= link_to "delete", micropost, :method => :delete,
+                                      :confirm => "Are you sure?",
+                                      :title => micropost.content,
+                                      :class => "g_delete" %>
+  </span>
+  <% end %>
 </div>
