Working on following & followers.  Views mostly done.  Ready for controllers/models.  RSpec ???

--- a/app/views/shared/_display_gravatar_h1.html.erb
+++ b/app/views/shared/_display_gravatar_h1.html.erb
@@ -1,4 +1,7 @@
-    <h1>
-      <%= gravatar_for @user, :size => 30 %>
-      <%= @user.name %>
-    </h1>
+    <div class="gravatar_h1" style="display: inline-block;">
+      <h1>
+        <%= gravatar_for @user, :size => 30 %>
+        <%= @user.name %>
+      </h1>    
+    </div>
+    <%= render 'users/follow_form' if signed_in? %>
