CSS changes, Micropost-form on Home, Show pages, but not elsewhere, RSpec yellow (no follow functionality)

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-    <li>
+    <li style="margin:20px;">
       <%= gravatar_for user, { :size => 30, :class => 'gravatar_norm' } %>
       <%= link_to user.name, user_path(user) %>
       <% if current_user.admin? %>
