--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,25 @@
 <% if signed_in? %>
 
-    <h1>What's up?</h1>
+  <div class="g_container">
     
-    <%= render 'shared/micropost_error_messages' %>
-    <%= render 'shared/micropost_form' %>
-    <%= render 'shared/user_info' %>
-    <%= render 'shared/feed' %>
+    <div class="g_left">
+      <h1>What's up?</h1>
+      
+      <%= render 'shared/micropost_error_messages' %>
+      <%= render 'shared/micropost_form' %>      
+    </div>
+    
+    <div class="g_right round" id="g_right round" comment="user info">
+      <%= render 'shared/user_info' %>
+      <%= render 'shared/stats' %>    
+    </div>
+
+    <div class="g_left">
+      <%= render 'shared/feed' %>      
+    </div>
+    
+  </div>
+
     
 <% else %>
 
