--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -15,7 +15,7 @@ cntfield.value = maxlimit - field.value.length;
 //  End -->
 </script>
 
-<% if current_user?(@user) %>
+<% if current_user?(@user) || @title == 'Home' %>
 
   <div class="g_main">
   <%= form_for @micropost do |f| %>
