--- a/app/views/shared/_unfollow.html.erb
+++ b/app/views/shared/_unfollow.html.erb
@@ -1,5 +1,6 @@
-<%= form_for  current_user.relationships.find_by_followed_id(@user),
-              :html => { :method => :delete } do |f| %>
+<%= form_for(current_user.relationships.find_by_followed_id(@user),
+              :remote => true,
+              :html => { :method => :delete }) do |f| %>
   <div class="follow_button">
     <%= f.submit "Unfollow" %>
   </div>
