Everything working but JavaScript

--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -3,7 +3,7 @@
   <div class="stats_left">
     <a href="<%= following_user_path(@user) %>">
       <span id="following" class="stat">
-        <%= @user.following.count %> following
+        following <%= @user.following.count %>,
       </span>
     </a>
   </div>
