--- a/app/views/shared/_follow.html.erb
+++ b/app/views/shared/_follow.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(current_user.relationships.build(:followed_id => @user.id),
-                          :remote => true) do |f| %>
+<%= form_for current_user.relationships.build(:followed_id => @user.id),
+                :remote => true do |f| %>
   <%= f.hidden_field :followed_id %>
   <div class="follow_button">
     <%= f.submit "Follow" %>
