--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,2 +1,2 @@
-$("#follow_form").html("<%= escape_javascript(render('users/unfollow')) %>")
-$("#followers").html('<%= "#{@followed.followers.count} followers" %>')
+$("#follow_form").html("<%= escape_javascript(render('shared/unfollow')) %>")
+$("#followers").html('<%= "#{@user.followers.count} followers" %>')
