--- a/app/views/shared/_unfollow.html.erb
+++ b/app/views/shared/_unfollow.html.erb
@@ -1,6 +1,6 @@
-<%= form_for current_user.relationships.find_by_followed_id(@user),
+<%= form_for(current_user.relationships.find_by_followed_id(@user.id),
               :html => { :method => :delete },
-              :remote => true do |f| %>
+              :remote => true) do |f| %>
   <div class="follow_button">
     <%= f.submit "Unfollow" %>
   </div>
